--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@ layout: default
 
 <div class="wrapper grey">
   <div class="content">
-    <h1>About Open Commerce</h1>
-    <p><a href="https://opencommerce.github.io">Open Commerce</a> is a digital studio specializing in app software development. We deliver the most amazing <a href="https://opencommerce.github.io/clients">digital experiences</a> for our ambitious clients.</p>
+    <h1>About Open Commerce Initiative</h1>
+    <p><a href="https://opencommerce.github.io">Open Commerce </a> is a digital studio specializing in app software development. We deliver the most amazing <a href="https://opencommerce.github.io/clients">digital experiences</a> for our ambitious clients.</p>
 
     <p>Find out more about our open source projects, hacking, tips, tricks, and technology thinking on our <a href="https://opencommerce.github.io/blog">blog</a>.</p>
 
     <p>And if you love crafting truly exceptional software, <a href="https://opencommerce.github.io/hiring">join us</a>.</p>
 
     <div class="copyright">
-      Copyright &copy; 2016 Open Commerce<br />
+      Copyright &copy; 2016 Open Commerce <br />
       All rights reserved.
     </div>
   </div>
